Migrating to using parquet output format
Migrated to parquet but at the same time broke the implementation. Now multiple files are being generated with only 1 row per file